--- a/angular.json
+++ b/angular.json
@@ -7,7 +7,7 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "styl"
+          "style": "scss"
         }
       },
       "root": "",
@@ -34,7 +34,7 @@
             ],
             "styles": [
               "src/theme.less",
-              "src/styles.styl"
+              "src/styles.scss"
             ],
             "scripts": []
           },
