--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "@tinymce/tinymce-angular": "^3.3.1",
     "apollo-angular": "^1.8.0",
     "apollo-angular-link-http": "^1.9.0",
     "apollo-cache-inmemory": "^1.6.0",
@@ -31,10 +32,11 @@
     "graphql": "^14.5.0",
     "graphql-tag": "^2.10.0",
     "moment": "^2.24.0",
-    "ng-zorro-antd": "8.1.2",
+    "ng-zorro-antd": "^8.5.2",
     "ngx-custom-validators": "latest",
     "ngx-moment": "^3.4.0",
     "rxjs": "~6.4.0",
+    "tinymce": "^5.1.5",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
